# linked-inf-num

./: CMakeLists.txt  README.md
src/: linked_inf_num.h  main.cpp
src/inf_float/: CMakeLists.txt  inf_float.cpp  inf_float.h
src/inf_int/: CMakeLists.txt  inf_int.cpp  inf_int.h
src/uint_linked_list/: CMakeLists.txt  uint_linked_list.cpp  uint_linked_list.h
src/utils/: CMakeLists.txt  common_utils.cpp  common_utils.h
